0.4.5	UNRELEASED

0.4.4	2009-03-10

 BUG FIXES

  * Mark as compatible with bzr 1.13.

  Change license back to GPL2-+

0.4.3	2009-02-15

 BUG FIXES

  * Cope with ghosts in svn-upgrade. (#323140, #325402)

 PERFORMANCE

  * Register commands lazily, should reduce import time when unused.
  

0.4.2	2008-11-18

 FEATURES

  * Will automatically pull if it's not possible to rebase. 
    (#240204)

  * Use parent location as default rather than push location.

  * Hide "replay" command.

0.4.1	2008-09-01

 BUG FIXES

  * Loosen check of text parents a bit (required for bzr-svn).

 CHANGES

  * Support DESTDIR in Makefile.

0.4		2008-08-02

 CHANGES

  * Changed license from GPLv2 or later to GPLv3 or later.

 BUG FIXES

  * Fix compatibility with Bazaar 1.6. 

  * Fixed overactive assertion. (#242245)

  * Fixed O(history) access during plan creation. (Robert Collins, #249823)

 ENHANCEMENTS

  * Set author property to preserve committer and original author of the 
    commit.  (Lukáš Lalinský)

  * Add new option --pending-merges for rebasing pending merges after 
    "bzr up". (#162622)

0.3		2007-12-06

 ENHANCEMENTS

  * "bzr replay" now supports revision ranges.

  * Don't require any of the commands to be run in 
    the branch root.

  * Give preference to push location when no upstream location 
    is specified.

  * Make message when there is nothing to rebase a 
    bit friendlier.

 BUG FIXES

  * Fix "bzr replay", add test.

0.2		2007-10-19

 BUG FIXES

  * Raise exception about pending changes /before/ writing plan. 
    (#144407)

  * Use better merge bases (#144033)

  * Give proper warning when there is no common base. (#144401)

  * Support the -r argument to rebase.

  * Add --dry-run option to rebase command. 

  * Fix compatibility with Bazaar 0.92.
   (#144031)

  * Store parents correctly.
 
 FEATURES

  * Skip double merges by default, unless specified otherwise. (#126743)

  * Check for incompatible Bazaar functions.

  * Add replay command.
