@@ -1,5 +1,9 @@
 0.4.5	UNRELEASED
 
+ BUG FIXES
+
+  * Remove use of deprecated Revision.get_apparent_author().
+
 0.4.4	2009-03-10
 
  BUG FIXES
